# mav_findmine

./: .gitignore  LICENSE  README.md
documentation/diagrams/: demining_sequence.puml  (+4 more)
install/: 01_install_hwe.sh  02_install_netplan.sh  03_install_git.sh  04_install_ros.sh  05_install_sensor_autostart.sh  06_install_radar.sh  07_install_pps.sh  README.md  dependencies.rosinstall  install_blackfly.sh  install_dji_sdk.sh  startup_sensors.sh  startup_shortcuts
integration/fm_missions/: CMakeLists.txt  README.md  package.xml  setup.py
integration/fm_missions/cfg/core/: dji_sdk.yaml  position_controller.yaml
integration/fm_missions/cfg/mission/: single_trajectory_mission.yaml  task_server.yaml
integration/fm_missions/launch/: basestation.launch  core.launch  record_sensors.launch  sensors.launch  single_trajectory.launch  static_transforms.launch
integration/fm_missions/nodes/: single_trajectory_mission.py
integration/fm_missions/src/fm_missions/: mission.py  single_trajectory.py
integration/fm_vicon/: CMakeLists.txt  package.xml  setup.py
integration/fm_vicon/launch/: vicon.launch
integration/fm_vicon/scripts/: att_relay  compute_tf  gt_relay  pos_relay
libs/fm_altitude_estimator/: CMakeLists.txt  README.md  package.xml  setup.py
libs/fm_altitude_estimator/cfg/: moa_tuning.yaml
libs/fm_altitude_estimator/include/fm_altitude_estimator/: kalman_altitude_estimator.h
libs/fm_altitude_estimator/launch/: estimator.launch  estimator_test.launch
libs/fm_altitude_estimator/python/fm_altitude_estimator/: plot.py
libs/fm_altitude_estimator/scripts/: plot
libs/fm_altitude_estimator/src/: altitude_estimator_node.cc  kalman_altitude_estimator.cc
libs/fm_comm/: CMakeLists.txt  README.md  package.xml
libs/fm_comm/include/fm_comm/: dji_interface.h
libs/fm_comm/include/fm_comm/impl/: dji_interface_impl.h
libs/fm_comm/msg/: RadarBandInfo.msg  RadarDataRaw.msg  RadarDataRawStamped.msg  RadarInfo.msg
libs/fm_comm/src/: dji_interface.cc
libs/fm_comm/srv/: TrajectoryService.srv
libs/fm_comm/test/: tf-test.cpp
libs/fm_control/: CMakeLists.txt  README.md  package.xml
libs/fm_control/cfg/: PositionController.cfg
libs/fm_control/evaluation/: altitude_evaluation.py  controller_evaluation.py
libs/fm_control/include/fm_control/: enu_conversion.h  pid_controller.h  position_controller.h
libs/fm_control/launch/: enu_conversion.launch
libs/fm_control/src/: enu_conversion.cc  enu_conversion_node.cc  pid_controller.cc  position_controller.cc  position_controller_node.cc
libs/fm_mission_planner/: CMakeLists.txt  README.md  package.xml  plugin_description.xml  setup.py
libs/fm_mission_planner/cfg/: home.gps  mission_planner.rviz  mission_planner.yaml  target_table.csv  target_table_brache.csv  target_table_fifa.csv  target_table_hoengg.csv  target_table_irchel.csv
libs/fm_mission_planner/include/fm_mission_planner/: coverage_widget.h  hotpoint_widget.h  mission.h  mission_planner_panel.h  rectangle_widget.h  strip_widget.h  trajectory_widget.h
libs/fm_mission_planner/launch/: mission_planner.launch  mission_planner_offline.launch
libs/fm_mission_planner/nodes/: target_viz
libs/fm_mission_planner/python/fm_mission_planner/: target_viz.py
libs/fm_mission_planner/scripts/: Pix4D_GSD_Calculator.ods  server_launch.sh
libs/fm_mission_planner/src/: coverage_widget.cc  hotpoint_widget.cc  mission.cc  mission_planner_panel.cc  rectangle_widget.cc  strip_widget.cc  trajectory_widget.cc
libs/fm_pix4d/: CMakeLists.txt  README.md  package.xml  setup.py
libs/fm_pix4d/config/: camchain-imucam-2020-06-18-11-25-58.yaml
libs/fm_pix4d/python/fm_pix4d/: cam_calibration_manager.py  export_dsm.py  gcp_extractor.py  image_extractor.py  interpreter.py  path_helper.py  tms2xyz.py
libs/fm_pix4d/scripts/: export_dsm  fm_export_pix4d  fm_gcp_correct  fm_tile_tf  gcp_write.sh
libs/fm_radar_driver/: CMakeLists.txt  README.md  package.xml  setup.py
libs/fm_radar_driver/scripts/: convert_dji_positions  detect_circles  export_raw_positions
libs/fm_radar_driver/src/fm_radar_driver/: convert_dji_positions.py  detect_circles.py  export_raw_positions.py
libs/fm_sensor_watchdog/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
libs/fm_sensor_watchdog/cfg/: sensor_watchdog.yaml
libs/fm_sensor_watchdog/launch/: sensor_watchdog.launch
libs/fm_sensor_watchdog/scripts/: fm_sensor_watchdog
libs/fm_sensor_watchdog/src/fm_sensor_watchdog/: labels.py  sensor_watchdog.py  sensor_watchdog_plugin.py  trajectory_button.py  ui_manager.py
libs/fm_task_manager/: CMakeLists.txt  README.md  package.xml
libs/fm_task_manager/cfg/: Camera.cfg  ExecuteSingleTrajectory.cfg  GenerateSingleTrajectory.cfg  Landing.cfg  Logging.cfg  Postprocessing.cfg  TakeOff.cfg  Waypoint.cfg
libs/fm_task_manager/include/fm_task_manager/: task_env.h  task_server.h
libs/fm_task_manager/include/fm_task_manager/tasks/: camera.h  execute_single_trajectory.h  generate_single_trajectory.h  landing.h  logging.h  postprocessing.h  take_off.h  waypoint.h
libs/fm_task_manager/src/: task_env.cc  task_server.cc  task_server_node.cc
libs/fm_task_manager/src/tasks/: camera.cc  execute_single_trajectory.cc  generate_single_trajectory.cc  landing.cc  logging.cc  postprocessing.cc  take_off.cc  waypoint.cc
libs/fm_trajectories/: CMakeLists.txt  README.md  package.xml
libs/fm_trajectories/cfg/: findmine_eschikon.yaml  findmine_ulm_circles.yaml  findmine_ulm_rectangles.yaml  local_enu.gps  trajectory_generator.rviz
libs/fm_trajectories/include/fm_trajectories/: base_trajectory.h  circle_trajectory.h  polygon_trajectory.h  rectangle_trajectory.h  strip_trajectory.h  trajectory_generator.h  waypoint_trajectory.h
libs/fm_trajectories/launch/: trajectory_generator_offline.launch
libs/fm_trajectories/src/: base_trajectory.cc  circle_trajectory.cc  polygon_trajectory.cc  rectangle_trajectory.cc  strip_trajectory.cc  trajectory_generator.cc  trajectory_generator_node.cc  waypoint_trajectory.cc
libs/fm_trajectories/test/: circle-test.cpp
mav_findmine/: CMakeLists.txt  package.xml
(+16 files in other folders)
