<?xml version="1.0"?>
<package format="2">
  <name>fm_vicon</name>
  <version>1.0.0</version>
  <description>
    Groundtruth evaluation using Vicon motion tracking system.
  </description>

  <maintainer email="brik@ethz.ch">Rik Baehnemann</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <exec_depend>ros_vrpn_client</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>piksi_rtk_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

</package>
