<?xml version="1.0"?>
<package format="2">
  <name>fm_altitude_estimator</name>
  <version>1.0.0</version>
  <description>
    Altitude Estimator
  </description>

  <maintainer email="mpantic@ethz.ch">Michael Pantic</maintainer>
  <maintainer email="brik@ethz.ch">Rik Baehnemann</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>versavis</depend>
  <depend>tf2_ros</depend>
</package>
