<?xml version="1.0"?>
<package format="2">
  <name>fm_comm</name>
  <version>1.0.0</version>
  <description>
    ROS messages, services, and actions for FindMine tasks and sensors.
  </description>

  <maintainer email="brik@ethz.ch">Rik Baehnemann</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mav_planning_msgs</depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
