<?xml version="1.0"?>
<package format="2">
  <name>fm_control</name>
  <version>1.0.0</version>
  <description>
    Libraries to obtain DJI position control.
  </description>

  <maintainer email="brik@ethz.ch">Rik Baehnemann</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>libsbp_ros_msgs</depend>
  <depend>dji_sdk</depend>
  <depend>fm_comm</depend>
  <depend>geotf</depend>
  <depend>eigen_conversions</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>angles</depend>
  <depend>mav_trajectory_generation</depend>
  <depend>mav_trajectory_generation_ros</depend>

</package>
