<?xml version="1.0"?>
<package format="2">
  <name>fm_trajectories</name>
  <version>1.0.0</version>
  <description>
    Libraries for trajectory generation.
  </description>

  <maintainer email="brik@ethz.ch">Rik Baehnemann</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>mav_trajectory_generation</depend>
  <depend>mav_trajectory_generation_ros</depend>
  <depend>fm_comm</depend>
  <depend>mav_msgs</depend>
  <depend>mav_visualization</depend>
  <depend>angles</depend>
  <depend>geotf</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>rviz_satellite</exec_depend>

</package>
